@@ -10,6 +10,10 @@ Revision history for DBD::Oracle
   bind_col is called again without attributes. Both of these occur
   when fetchall_arrayref is called with a slice (Martin J. Evans).
 
+  - Fix RT88135. Add statistics_info support (patch by Steffen Goeldner)
+
+  - Fix RT89491. Add RULE hint (patch by Steffen Goeldner)
+
 1.63_00   2013-05-03
 
   [ENHANCEMENTS]
